# A3Agent

./: .gitignore  .taurignore  BS_MIGRATION_PLAN.md  BUILD_GUIDE.md  CONFIG_MANAGEMENT.md  FIXES_SUMMARY.md  MAC_SETUP.md  MULTI_USER_TODO.md  QUICKSTART.md  README.md  STANDALONE_BUILD.md  agent_loop.py  agentmain.py  api_server.py  build_macos_dmg.sh  build_macos_release.sh  build_macos_release_light.sh  build_macos_standalone_app.sh  build_standalone.ps1  build_standalone_macos.sh  build_windows_installer.ps1  build_windows_standalone.ps1  check_env.bat  check_env.ps1  check_env.sh  debug_config_paths.py  ga.py  launch_app.py  launch_windows.py  mykey.json  package-lock.json  package.json  package_portable.bat  pyproject.toml  requirements-macos-build.txt  test_config_init.bat  test_mykey_readwrite.py  使用说明.md
assets/: agent_bbs.py
frontend/: admin-accounts.html  admin-accounts.js  admin-configs.html  admin-configs.js  admin.html  admin.js  app.js  floating.html  index.html  index.html.bak-20260318-165130  tailwind.config.cjs
frontends/: chatapp_common.py  cost_tracker.py  desktop_pet_v2.pyw  dingtalkapp.py  export_cmd.py  fsapp.py  qqapp.py  review_cmd.py  session_names.py  wecomapp.py
installer/: A3Agent.iss
memory/: file_access_stats.json  global_mem_insight.txt  ljqCtrl.py  mem_scanner.py  scheduled_task_sop.md  sophub使用说明.md  subagent_sop.md  tmwebdriver_sop.md  web_setup_sop.md  wechat_package_install_sop.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+82 files in other folders)
